examples/pos/issue603/issue603_2.effekt
interface HigherOrder { def higher{p: () => Unit}: Unit }

def helloWorld() at {} = box new HigherOrder {
  def higher{p} = p()
}

def main() = {}
