examples/neg/typer/no-resume-in-object.effekt
interface Konsole { def print(msg: String): Unit }

def main() = {
  def c = new Konsole {
    def print(msg) = resume(())
  };
  ()
}